ToDo #12 : Debugged form2 (Calc carpet price form) validation and completed todo items

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
       <!-- SECOND FORM START - CALC CUT SIZE SQYDS AND PRICE 
       ##############################################################-->
-      <form action="" method="post" id="form2-Cut-Calc" class="tabcontent">
+      <form action="" method="post" id="form2-Cut-Calc" name="cut-form" class="tabcontent">
          <div class="form-heading">
             <h1>Calculate Cut Price</h1>
          </div>
@@ -163,7 +163,7 @@
                   <div class="error2-inch-text-wrapper"><i>* Inch required</i></div>
                   <div class="error2-inch-icon-wrapper"><i class="fas fa-exclamation-circle error2-icon"></i></div>
 
-                  <button type="button" class="delete-input-btn hidden-delete-btn" onclick="return this.parentNode.remove(); "><i class="far fa-trash-alt trash-icon"></i></button>
+                  <button type="button" class="delete-input-btn" onclick="return this.parentNode.remove(); "><i class="far fa-trash-alt trash-icon"></i></button>
                </li>
             </ol>
          </div>
