--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       #############################################################-->      
       <form action="" method="get" id="form1-Roll-Size-Calc" class="tabcontent" >
          <div class="form-heading">
-            <h1>Calculate Roll Good Quantity</h1>
+            <p>Calculate Roll Good Quantity</p>
          </div>
          <div class="input-group">
             <label for="roll-width">Select roll width size</label>
@@ -96,7 +96,7 @@
       ##############################################################-->
       <form action="" method="post" id="form2-Cut-Calc" name="cut-form" class="tabcontent">
          <div class="form-heading">
-            <h1>Calculate Cut Price</h1>
+            <p>Calculate Cut Price</p>
          </div>
          <div class="input-group2">
             <label for="roll-width2">Select roll width size</label>
@@ -111,26 +111,6 @@
          
          <!-- Rewrite for cuts container -->
          <div class="input-group2">
-            <!-- <div id="cuts">
-               <div class="cut-input-wrapper">
-                  <label for="cut1Length">Length of cut 1:</label>
-                  <input type="number" class="cutLengthFt" name="cut-size-ft" min="0" step="1" value="" placeholder="0" required>
-                  <span class="measurement-unit measurement-unit-ft">ft</span>
-
-                  <div class="error2-ft-text-wrapper"><i>* Feet required</i></div>
-                  <div class="error2-ft-icon-wrapper"><i class="fas fa-exclamation-circle error2-icon"></i></div>
-                  
-
-                  <input type="number" id="cut1LengthInch" class="cutLengthInch" name="cut-size-in" min="0" max="11" step="1" value="" placeholder="0" required>
-                  <span class="measurement-unit measurement-unit-in">in</span>
-
-                  <div class="error2-inch-text-wrapper"><i>* Inch required</i></div>
-                  <div class="error2-inch-icon-wrapper"><i class="fas fa-exclamation-circle error2-icon"></i></div>
-
-                  <button type="button" class="delete-input-btn hidden-delete-btn" onclick="return this.parentNode.remove(); "><i class="far fa-trash-alt trash-icon"></i></button>
-                </div>
-            </div> -->
-
             <!-- Cut List Rewrite -->
             <ol id="cuts-list" class="cut-input-wrapper">
                <!-- <label for="cut1Length">Length of cut 1:</label> -->
