--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
          </div>
          
          <div class="buttons-container">
-            <button type="submit" value="Calculate-sqyd" id="submit-btn" class="submit-btn" >Calculate</button>
+            <button type="submit" value="Calculate-sqyd" id="calc-roll-size-submit-btn" class="submit-btn" >Calculate</button>
             <button type="reset" value="Reset-sqyd-form" id="reset-btn" class="clear-btn">Clear</button>
          </div>  
 
@@ -149,7 +149,7 @@
          </div>
 
          <div class="buttons-container">
-            <button type="submit" value="Calculate-cut-price-btn" id="submit-btn" class="submit-btn" >Get Price</button>
+            <button type="submit" value="Calculate-cut-price-btn" id="calc-cut-price-submit-btn" class="submit-btn" >Get Price</button>
             <button type="button" value="Reset-price-form" id="reset-btn" class="clear-btn">Clear</button>
          </div>
          
