#21 Creating branch to add header section. Basic structure and styling added.

--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
    <!-- End Google Tag Manager (noscript) -->
    
    <div class="form-container">
+      <!-- HEADER SECTION -->
+      <header>
+         
+      </header>
+      <!-- TAB SECTION -->
       <div class="tab-wrapper">
          <button class="tablinks calc-selection-btn" id="cal-rollSize-form" onclick="openForm(event, 'form1-Roll-Size-Calc')">Calc Roll Quantity</button>
          <button class="tablinks calc-selection-btn" id="cal-price-form" onclick="openForm(event, 'form2-Cut-Calc')">Calc Carpet Price</button>
