--- a/index.html
+++ b/index.html
@@ -43,7 +43,13 @@
    <div class="form-container">
       <!-- HEADER SECTION -->
       <header>
-         
+         <div class="header__wrapper">
+            <ul class="header__menu-list">
+               <li class="header__menu-list-item" title="How to use"><i class="fas fa-info-circle"></i></li>
+               <li class="header__menu-list-item" title="Tips and FQ"><i class="fas fa-question-circle"></i></li>
+               <li class="header__menu-list-item" title="Feedback"><i class="fas fa-comment-alt"></i></li>
+            </ul>
+         </div>
       </header>
       <!-- TAB SECTION -->
       <div class="tab-wrapper">
