Close / open function for menu-display container. How to use Template added.

--- a/index.html
+++ b/index.html
@@ -175,9 +175,10 @@
          <p><i class="fa-solid fa-circle-info"></i></p>
       </footer>
       
-
    </div>
 
+   <!-- HEADER MENU ITEMS DISPLAY -->
+   <div id="menu-display"></div>
    
 
 
