Ver 1.1.2 - Header Section #21
Feed back form added.

--- a/index.html
+++ b/index.html
@@ -181,6 +181,31 @@
    <!-- HEADER MENU ITEMS DISPLAY -->
    <div id="menu-display"></div>
    
+   <!-- <div class="form-container">
+      <form action="" method="post" id="feedback-form" name="feedback-form">
+         <div class="form-heading">
+            <p>Feed Back Form</p>
+         </div>
+         <div class="feedback-form-txt">
+            <p>Appreciate any feedback you may have that will help make this tool more helpful or if you notice any issues please let me know. Thank you.</p>
+         </div>
+         <div class="form-group">
+            <label for="store-num">Store #</label>
+            <br>
+            <input type="number" name="store-num" id="store-num-input" value="" placeholder="Optional" />
+         </div>
+         <div class="form-group">
+            <label for="textarea">Comment</label>
+            <br>
+            <textarea id="txt-area" name="txtarea" rows="6" cols="60" maxlength="300" required ></textarea>
+            <br>
+            <p class="char-remaining-txt">Characters remaining: <span id="textarea-char-counter">300</span></p>            
+         </div>
+         <div class="form-group feedback-form-submit-btn-wrapper">
+            <button type="submit" class="feedback-form-submit-btn">Submit</button>
+         </div>
+      </form>
+   </div> -->
 
 
 </body>
