--- a/index.html
+++ b/index.html
@@ -188,5 +188,5 @@
 <script src="assets/js/all.js"></script>
 <!-- For feddback form submission -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script src="submission-script.js"></script>
+<script src="assets/js/submission-script.js"></script>
 </html>
