--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
       
    </div>
 
-   <!-- HEADER MENU ITEMS DISPLAY -->
+   <!-- HEADER MENU ITEMS CONTENT CONTAINER -->
    <div id="menu-display"></div>
 
 
@@ -189,4 +189,21 @@
 <!-- For feddback form submission -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="assets/js/submission-script.js"></script>
+
+<!-- <script>let form = document.querySelector('feedback-form');
+form.addEventListener('submit', (e) => {
+   e.preventDefault();
+   document.querySelector("#feedback-form-submitBtn").value="Submitting..";
+   let data = new FormData(form);
+   fetch('https://script.google.com/macros/s/AKfycbxxvtt18dcYkd0DA9zzTcz3yuh6Eg8ikL89zy4u1thySbMkooyCI2sNfqsn-Gg0CdHy/exec', {
+      method:"POST",
+      body:data
+   })
+      .then(res => res.text())
+      .then(data => {
+         document.querySelector("#went").innerHTML=data;
+         document.querySelector("#feedback-form-submitBtn").value="Submit";
+      });
+});</script> -->
+
 </html>
