Temp feedback template added with directions on leaving feed back until form is complete.

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
          <div class="header__wrapper">
             <ul class="header__menu-list">
                <li class="header__menu-list-item" title="How to use"><i class="fas fa-info-circle"></i></li>
-               <li class="header__menu-list-item" title="Tips and FQ"><i class="fas fa-question-circle"></i></li>
-               <li class="header__menu-list-item hide-feedback" title="Feedback"><i class="fas fa-comment-alt"></i></li>
+               <li class="header__menu-list-item" title="Tips and FQ"><i class="far fa-question-circle"></i></li>
+               <li class="header__menu-list-item" title="Feedback"><i class="far fa-comment-alt"></i></li>
             </ul>
          </div>
       </header>
