--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
       </header>
       <!-- TAB SECTION -->
       <div class="tab-wrapper">
-         <button class="tablinks calc-selection-btn" id="cal-rollSize-form" onclick="openForm(event, 'form1-Roll-Size-Calc')">Calc Roll Quantity</button>
-         <button class="tablinks calc-selection-btn" id="cal-price-form" onclick="openForm(event, 'form2-Cut-Calc')">Calc Carpet Price</button>
+         <button class="tablinks calc-selection-btn" id="cal-rollSize-form" onclick="openForm(event, 'form1-Roll-Size-Calc')">Calc Roll Goods Inventory</button>
+         <button class="tablinks calc-selection-btn" id="cal-price-form" onclick="openForm(event, 'form2-Cut-Calc')">Calc Carpet Cut Price</button>
       </div>
       
 
@@ -171,7 +171,7 @@
       </form>
 
       <footer>
-         <p>Ver 1.3.2</p>
+         <p>Ver 1.4.3</p>
          <p>Site designed and coded by: Rudolph Mims || Store#0739</p>
          <p><i class="fa-solid fa-circle-info"></i></p>
       </footer>
