Corrected a typo in iventory form

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="error-icon-wrapper fist-error-icon"><i class="fas fa-exclamation-circle error-icon"></i></div>
          </div>
          <div class="input-group">
-            <label for="roll-diameter">Diameter of the entier roll</label>
+            <label for="roll-diameter">Diameter of the entire roll</label>
             <input type="number" name="roll-diameter" id="roll-diameter" value="" placeholder="0" min="0" step="any" required />
             <span class="input-unit-inch">in.</span>
             <div class="error-text-wrapper"><i>* Roll diameter inches required</i></div>
@@ -171,7 +171,7 @@
       </form>
 
       <footer>
-         <p>Ver 1.4.4</p>
+         <p>Ver 1.4.3</p>
          <p>Site designed and coded by: Rudolph Mims || Store#0739</p>
          <p><i class="fa-solid fa-circle-info"></i></p>
       </footer>
